@@ -15,8 +15,8 @@ Build-Depends:
  gawk,
  hardening-wrapper,
  libaio-dev[linux-any],
+ libedit-dev,
  libncurses5-dev (>= 5.0-6),
- libreadline-dev,
  libwrap0-dev (>= 7.6-8.3),
  lsb-release,
  perl,
