@@ -65,12 +65,6 @@ if [ "$1" = "purge" -a ! \( -x /usr/sbin/mysqld -o -L /usr/sbin/mysqld \) ]; the
     rm -rf /var/run/mysqld
     userdel mysql || true
   fi
-
-  # (normally) Automatically added by dh_installinit
-  if [ "$1" = "purge" ] ; then
-        update-rc.d mysql remove >/dev/null || exit 0
-  fi
-  # (normally) End automatically added section
 fi
 
 # (normally) Automatically added by dh_installdebconf
